--- a/week08/lesson2_dom-Student/starter/index.html
+++ b/week08/lesson2_dom-Student/starter/index.html
@@ -11,6 +11,6 @@
       <!-- Quotes will appear here -->
     </div>
 
-    <script src="ui.js"></script>
+  <script type="module" src="ui.js"></script>
   </body>
 </html>
